// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradePicker disables the button and has correct text for not graded assignment type 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={1}
      style={undefined}
      testID="grade-picker.button"
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            undefined,
          ]
        }
      >
        Not Graded
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`GradePicker renders points based grades 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="grade-picker.button"
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            undefined,
          ]
        }
      >
        
        5/10
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`GradePicker renders the activity indicator when pending 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={1}
      style={undefined}
      testID="grade-picker.button"
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`GradePicker renders the picker for pass fail assignments 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="grade-picker.button"
    >
      <Image
        source={1}
        style={
          Object {
            "tintColor": "#368BD8",
          }
        }
      />
    </TouchableOpacity>
  </View>
  <Animated.View
    style={
      Object {
        "height": mockConstructor {},
        "overflow": "hidden",
      }
    }
  >
    <View
      style={undefined}
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "---",
              "textColor": undefined,
              "value": "",
            },
            Object {
              "label": "Complete",
              "textColor": undefined,
              "value": "complete",
            },
            Object {
              "label": "Incomplete",
              "textColor": undefined,
              "value": "incomplete",
            },
            Object {
              "label": "Excuse Student",
              "textColor": undefined,
              "value": "ex",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </Animated.View>
</View>
`;

exports[`GradePicker renders with excused 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="grade-picker.button"
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            undefined,
          ]
        }
      >
        Excused
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`GradePicker renders with no grade 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 9,
      }
    }
  >
    <Text
      accessibilityTraits="header"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Grade
    </Text>
    <TouchableOpacity
      accessibilityComponentType="button"
      accessibilityTraits="button"
      activeOpacity={0.2}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      style={undefined}
      testID="grade-picker.button"
    >
      <Image
        source={1}
        style={
          Object {
            "tintColor": "#368BD8",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;
